--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -26,7 +26,8 @@
 
 @font-face {
   font-family: 'Craft';
-  src: url('../fonts/Craft.woff') format('woff'),
+  src:
+    url('../fonts/Craft.woff') format('woff'),
     url('../fonts/Craft.ttf') format('truetype'),
     url('../fonts/Craft.svg#Craft') format('svg');
   font-weight: normal;
@@ -182,7 +183,9 @@ fieldset:last-child,
 }
 
 .offset-drag-helper {
-  transition: margin linear 200ms, padding linear 200ms;
+  transition:
+    margin linear 200ms,
+    padding linear 200ms;
 }
 
 body.dragging.ltr .offset-drag-helper {
@@ -2430,7 +2433,9 @@ div.btn.submit input {
       }
 
       @include focus-styles {
-        box-shadow: inset 0 0 0 1px var(--hairline-color), var(--focus-ring);
+        box-shadow:
+          inset 0 0 0 1px var(--hairline-color),
+          var(--focus-ring);
       }
     }
 
@@ -2873,7 +2878,8 @@ table {
       filter: brightness(0.85);
 
       img {
-        box-shadow: 0 0 0 1px transparentize($darkSelColor, 0.9),
+        box-shadow:
+          0 0 0 1px transparentize($darkSelColor, 0.9),
           0 6px 4px -4px transparentize($darkSelColor, 0.8);
       }
     }
@@ -4371,8 +4377,10 @@ ul.tree,
         position: relative;
         z-index: 1;
         cursor: default;
-        box-shadow: inset 0 2px 0 var(--highlight-color),
-          0 0 0 1px $hairlineColor, 0 2px 12px transparentize($grey200, 0.5);
+        box-shadow:
+          inset 0 2px 0 var(--highlight-color),
+          0 0 0 1px $hairlineColor,
+          0 2px 12px transparentize($grey200, 0.5);
         background-color: var(--white);
       }
 
@@ -4458,7 +4466,8 @@ ul.tree,
       padding-bottom: var(--m);
       color: var(--text-color) !important;
       background-color: var(--yellow-050) !important;
-      box-shadow: 0 0 0 1px var(--yellow-300),
+      box-shadow:
+        0 0 0 1px var(--yellow-300),
         0 2px 12px transparentize($grey200, 0.5);
 
       p {
@@ -4577,7 +4586,9 @@ $min2ColWidth: 400px;
       align-items: center;
       margin: 0 var(--neg-padding) !important;
       padding: 0 var(--padding);
-      transition: padding-left linear 100ms, padding-right linear 100ms;
+      transition:
+        padding-left linear 100ms,
+        padding-right linear 100ms;
 
       &.nested {
         @include padding-left(38px);
@@ -4862,7 +4873,8 @@ $min2ColWidth: 400px;
 .slideout {
   position: absolute;
   background-color: var(--white);
-  box-shadow: 0 0 0 1px transparentize($grey400, 0.75),
+  box-shadow:
+    0 0 0 1px transparentize($grey400, 0.75),
     0 25px 100px transparentize($grey900, 0.5) !important;
   display: flex;
   flex-direction: column;
@@ -6015,7 +6027,8 @@ $min2ColWidth: 400px;
           @include margin-left(14px);
           padding: 0 4px;
           border-radius: var(--medium-border-radius);
-          box-shadow: 0 0 0 1px transparentize($grey600, 0.75),
+          box-shadow:
+            0 0 0 1px transparentize($grey600, 0.75),
             0 1px 3px -1px transparentize($grey600, 0.5);
         }
       }
