--- a/src/web/assets/craftsupport/src/CraftSupportWidget.scss
+++ b/src/web/assets/craftsupport/src/CraftSupportWidget.scss
@@ -80,7 +80,8 @@
           max-height: 250px;
           overflow: scroll;
           background: var(--gray-050);
-          box-shadow: inset 0 2px 2px -2px transparentize($grey800, 0.9),
+          box-shadow:
+            inset 0 2px 2px -2px transparentize($grey800, 0.9),
             inset 0 -2px 2px -2px transparentize($grey800, 0.9);
 
           .cs-search-icon {
