simple search approach - WIP

--- a/src/templates/settings/fields/index.twig
+++ b/src/templates/settings/fields/index.twig
@@ -18,7 +18,6 @@
 ] %}
 
 {% set emptyMessage = "No fields exist yet."|t('app') %}
-{% set fields = craft.app.fields.getAllFields() %}
 
 
 {% block actionButton %}
@@ -30,28 +29,6 @@
 {% block content %}
     <div id="fields-vue-admin-table"></div>
 {% endblock %}
-
-{% set tableData = [] %}
-{% for field in fields %}
-    {% set fieldIsMissing = false %}
-
-    {% if field is missing %}
-        {% set fieldIsMissing = true %}
-    {% endif %}
-
-    {% set tableData = tableData|merge([{
-        id: field.id,
-        title: field.name|t('site'),
-        translatable: field.getIsTranslatable(null) ? (field.getTranslationDescription(null) ?? 'This field is translatable.'|t('app')),
-        searchable: field.searchable ? true : false,
-        url: url('settings/fields/edit/' ~ field.id),
-        handle: field.handle,
-        type: {
-            isMissing: fieldIsMissing,
-            label: fieldIsMissing ? field.expectedType : field.displayName()
-        },
-    }]) %}
-{% endfor %}
 
 {% js %}
     var columns = [
@@ -97,6 +74,7 @@
         container: '#fields-vue-admin-table',
         deleteAction: 'fields/delete-field',
         emptyMessage: Craft.t('app', '{{ emptyMessage }}'),
-        tableData: {{ tableData|json_encode|raw }},
+        tableDataEndpoint: 'fields/table-data',
+        search: true,
     });
 {% endjs %}
