no search results msg

--- a/src/templates/settings/fields/index.twig
+++ b/src/templates/settings/fields/index.twig
@@ -11,6 +11,7 @@
     "Type",
     "This field’s values are used as search keywords.",
     "No fields exist yet.",
+    "No results.",
 ]) %}
 
 {% set crumbs = [
