--- a/src/templates/utilities/_index.twig
+++ b/src/templates/utilities/_index.twig
@@ -3,31 +3,7 @@
 {% set title = displayName %}
 
 {% block sidebar %}
-    <nav aria-label="{{ 'Utilities'|t('app') }}">
-        <ul>
-            {% for utility in utilities %}
-                {% set selected = utility.id == id %}
-                <li>
-                    <a class="{% if selected %}sel{% elseif utility.badgeCount %}has-badge{% endif %}" href="{{ url('utilities/'~utility.id) }}">
-                        <span class="icon icon-mask" aria-hidden="true">{{ svg(utility.iconSvg, sanitize=false) }}</span>
-                        <span class="label">{{ utility.displayName }}</span>
-                        {% if not selected and utility.badgeCount %}
-                            <span class="badge" aria-hidden="true">{{ utility.badgeCount|number(decimals=0) }}</span>
-                            {{ tag('span', {
-                                class: 'visually-hidden',
-                                data: {
-                                    notification: true,
-                                },
-                                text: '{num, number} {num, plural, =1{notification} other{notifications}}'|t('app', {
-                                   num: utility.badgeCount,
-                                }),
-                            }) }}
-                        {% endif %}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    </nav>
+    {{ sidebarHtml | raw }}
 {% endblock %}
 
 {% block toolbar %}
