Starting to figure out attributes

--- a/src/templates/_ui/nav-item.twig
+++ b/src/templates/_ui/nav-item.twig
@@ -1,4 +1,4 @@
-<li {% if id %}id="{{ id }}"{% endif%} class="{% if type == 'heading' %}heading{% endif %}">
+<li {{ attr(attributes) }}>
     {% if type == 'heading' %}
         <span>{{ label }}</span>
     {% else %}
