--- a/src/templates/_ui/nav.twig
+++ b/src/templates/_ui/nav.twig
@@ -1,4 +1,4 @@
-<nav id="{{ id }}" {% if label %}aria-label="{{ label }}"{% endif %}>
+<nav {{ attr(attributes) }}>
     <ul>
         {% for item in items %}
             {{ item | raw }}
