--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -50,7 +50,6 @@
   --ui-control-active-bg-color: #{transparentize($inputColor, 0.5)};
   --ui-control-border-radius: var(--large-border-radius);
   --ui-control-height: calc((34rem / 16)); // 1rem == 16px
-  --icon-opacity: 0.8;
   --light-focus-hsl: #{hue($lightFocusColor)}, #{saturation($lightFocusColor)},
     #{lightness($lightFocusColor)};
   --medium-focus-hsl: #{hue($mediumFocusColor)},
@@ -458,6 +457,10 @@ a {
   body.underline-links &,
   &:hover {
     text-decoration: underline;
+  }
+
+  .icon svg {
+    @include svg-mask(var(--link-color));
   }
 }
 
@@ -3624,7 +3627,7 @@ $checkboxPadding: $checkboxSize + 4;
     z-index: 1;
   }
 
-  .flex {
+  .elements:not(:empty) + .flex {
     padding-top: 7px;
   }
 
@@ -5967,19 +5970,8 @@ $min2ColWidth: 400px;
         .menu-option {
           @include padding-left(32px);
 
-          &[data-icon],
-          &.icon,
           &.sel {
             &:before {
-              @include floatleft;
-              @include margin(4px, 0, 0, -22px);
-              width: 14px;
-              font-size: 14px;
-              color: var(--ui-control-color);
-            }
-
-            &.error:before {
-              color: var(--error-color);
             }
           }
 
@@ -5987,9 +5979,12 @@ $min2ColWidth: 400px;
             background: var(--gray-050);
 
             &:not([data-icon]):before {
-              content: 'check';
+              @include floatleft;
+              @include margin(4px, 0, 0, -22px);
               font-size: 14px;
               width: 14px;
+              content: 'check';
+              color: var(--ui-control-color);
               margin-top: 3px !important;
             }
           }
@@ -6079,17 +6074,47 @@ $min2ColWidth: 400px;
   }
 }
 
-.menu {
-  span.icon {
-    position: relative;
-    top: -2px;
-    display: inline-block;
-    width: 14px;
-    @include margin-left(-1px);
-    @include margin-right(9px);
-    text-align: center;
-    font-size: 14px;
-    color: var(--ui-control-color);
+.menu li {
+  & > a,
+  & > button {
+    &[data-icon]:before,
+    [data-icon]:before,
+    span.icon:not([data-icon]) {
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      @include margin-left(-1px);
+      @include margin-right(9px);
+    }
+
+    &[data-icon]:before,
+    [data-icon]:before {
+      position: relative;
+      top: -2px;
+      text-align: center;
+      font-size: 14px;
+      color: var(--ui-control-color);
+    }
+
+    span.icon:not([data-icon]) svg {
+      display: block;
+      position: relative;
+      top: 1px;
+      width: 100%;
+      height: 100%;
+      @include svg-mask(var(--ui-control-color));
+    }
+
+    &.error {
+      &[data-icon]:before,
+      [data-icon]:before {
+        color: var(--error-color);
+      }
+
+      span.icon:not([data-icon]) svg {
+        @include svg-mask(var(--error-color));
+      }
+    }
   }
 }
 
@@ -6121,7 +6146,7 @@ $min2ColWidth: 400px;
   hr.padded,
   .h6.padded,
   h6.padded {
-    @include margin-left(16px);
+    @include margin-left(20px);
   }
 }
 
@@ -6654,7 +6679,6 @@ body.reduce-focus-visibility {
 
   &:before {
     --checkbox-size: 14px;
-    --icon-opacity: 1;
     @include icon;
     content: 'check';
     line-height: var(--checkbox-size);
@@ -6995,7 +7019,6 @@ td.errors .text,
     height: 15px;
     width: 2px;
     background-color: var(--ui-control-color);
-    opacity: var(--icon-opacity);
   }
 
   &:before {
