display large thumbs in a row

--- a/src/templates/_elements/list.twig
+++ b/src/templates/_elements/list.twig
@@ -6,6 +6,7 @@
   class: [
     'elements',
     (inline ?? false) ? 'inline-chips' : null,
+    (viewMode == 'large') ? 'large-thumbs': null,
   ]|filter,
 } %}
   {% for element in elements %}
