Quiet autoprefixer warning

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5662,7 +5662,7 @@ $min2ColWidth: 400px;
 
 .element-index-view-menu-table-column {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   align-content: stretch;
   margin-bottom: 4px;
 
