--- a/src/templates/_includes/forms/selectize.twig
+++ b/src/templates/_includes/forms/selectize.twig
@@ -1,7 +1,7 @@
 {% set id = id ?? "selectize#{random()}" %}
 {% set selectizeOptions = {
     dropdownParent: 'body',
-    plugins: ['auto_position']
+    plugins: ['auto_position'],
 }|merge(selectizeOptions ?? []) %}
 
 {% set multi = multi ?? false %}
