--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -22,7 +22,7 @@
     class: {
       hidden: item.hidden ?? false,
     }|filter|keys,
-  } %}
+  }|merge(item.liAttributes ?? {}) %}
     {% set selected = item.selected ?? false %}
     {% tag (type == 'button' ? 'button' : 'a') with {
       id: id,
@@ -43,23 +43,25 @@
         form: (item.action ?? false) ? 'false' : null,
       }|filter,
     }|merge(item.attributes ?? {}, recursive=true) %}
-      {% if item.icon ?? false %}
-        <span class="icon">{{ iconSvg(item.icon) }}</span>
-      {% endif %}
-      {% if item.status ?? false -%}
-        {{ statusIndicator(item.status) }}
-      {%- endif -%}
-      <span class="menu-item-label">{{ item.label ?? item.html|raw }}</span>
-      {% if item.description is defined %}
-        <div class="menu-item-description smalltext light">{{ item.description }}</div>
-      {% endif %}
-      {% if selected %}
-        <span class="visually-hidden">, selected</span>
-      {% endif %}
+      {%- apply spaceless %}
+        {% if item.icon ?? false %}
+          <span class="icon">{{ iconSvg(item.icon) }}</span>
+        {% endif %}
+        {% if item.status ?? false -%}
+          {{ statusIndicator(item.status) }}
+        {%- endif -%}
+        <span class="menu-item-label">{{ item.label ?? item.html|raw }}</span>
+        {% if item.description is defined %}
+          <div class="menu-item-description smalltext light">{{ item.description }}</div>
+        {% endif %}
+        {% if selected %}
+          <span class="visually-hidden">, selected</span>
+        {% endif %}
+      {% endapply -%}
     {% endtag %}
   {% endtag %}
   {% js %}
-    $('#{{ id|namespaceInputId }}').on('click', () => {
+    $('#{{ id|namespaceInputId }}').on('activate', () => {
       $('#{{ menuId|namespaceInputId }}').data('disclosureMenu').hide();
     });
   {% endjs %}
