--- a/src/templates/_includes/forms/elementSelect.twig
+++ b/src/templates/_includes/forms/elementSelect.twig
@@ -60,7 +60,7 @@
         }) }}
     {% endif %}
 
-    <div class="flex flex-nowrap">
+    <div class="flex flex-nowrap mt-xs">
         {{ tag('button', {
             type: 'button',
             class: [
