--- a/src/templates/_elements/list.twig
+++ b/src/templates/_elements/list.twig
@@ -6,6 +6,7 @@
   {% tag 'ul' with {
     class: [
       'elements',
+      'chips',
       (inline ?? false) ? 'inline-chips' : null,
     ]|filter,
   } %}
