--- a/src/templates/_includes/forms.twig
+++ b/src/templates/_includes/forms.twig
@@ -123,6 +123,16 @@
 {% endmacro %}
 
 
+{% macro componentSelect(config) %}
+    {% include "_includes/forms/componentSelect" with config only %}
+{% endmacro %}
+
+
+{% macro entryTypeSelect(config) %}
+    {% include "_includes/forms/entryTypeSelect" with config only %}
+{% endmacro %}
+
+
 {% macro autosuggest(config) %}
     {% include "_includes/forms/autosuggest" with config only %}
 {% endmacro %}
@@ -135,11 +145,6 @@
 
 {% macro iconPicker(config) %}
     {% include '_includes/forms/iconPicker' with config only %}
-{% endmacro %}
-
-
-{% macro entryType(config) %}
-    {% include "_includes/forms/entryType" with config only %}
 {% endmacro %}
 
 
@@ -323,6 +328,18 @@
 {% endmacro %}
 
 
+{% macro componentSelectField(config) %}
+    {% set config = config|merge({id: config.id ?? "componentselect#{random()}"}) %}
+    {{ _self.field(config, 'template:_includes/forms/componentSelect') }}
+{% endmacro %}
+
+
+{% macro entryTypeSelectField(config) %}
+    {% set config = config|merge({id: config.id ?? "entrytypeselect#{random()}"}) %}
+    {{ _self.field(config, 'template:_includes/forms/entryTypeSelect') }}
+{% endmacro %}
+
+
 {% macro autosuggestField(config) %}
     {% set config = config|merge({
         id: config.id ?? "autosuggest#{random()}",
@@ -368,12 +385,6 @@
 {% macro iconPickerField(config) %}
     {% set config = config|merge({id: config.id ?? "iconselect#{random()}"}) %}
     {{ _self.field(config, 'template:_includes/forms/iconPicker') }}
-{% endmacro %}
-
-
-{% macro entryTypeField(config) %}
-    {% set config = config|merge({id: config.id ?? "entrytype#{random()}"}) %}
-    {{ _self.field(config, 'template:_includes/forms/entryType') }}
 {% endmacro %}
 
 
