--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -86,14 +86,15 @@
             section.type != 'single' ? 'hidden',
         ]|filter,
     } %}
-        {{ forms.field({
+        {{ forms.entryTypeSelectField({
             label: 'Entry Type',
             instructions: 'Choose the type of entry this section will have.'|t('app'),
             id: 'single-entry-type',
             name: 'singleEntryType',
-            options: singleEntryTypeOptions,
-            value: section.getEntryTypes()|map(entryType => entryType.id)|first,
+            value: section.getEntryTypes()|first,
+            limit: 1,
             errors: section.getErrors('entryTypes'),
+            create: true,
         }, 'template:_includes/forms/entryType.twig') }}
     {% endtag %}
 
@@ -104,15 +105,14 @@
             section.type not in ['channel', 'structure'] ? 'hidden',
         ]|filter,
     } %}
-        {{ forms.entryTypeField({
+        {{ forms.entryTypeSelectField({
             label: 'Entry Types'|t('app'),
             instructions: 'Choose the types of entries that can be included in this section.'|t('app'),
             id: 'entry-types',
-            name: 'entryTypes',
-            options: entryTypeOptions,
-            values: section.getEntryTypes()|map(entryType => entryType.id),
-            multi: true,
+            name: 'entryTypes[]',
+            values: section.getEntryTypes(),
             errors: section.getErrors('entryTypes'),
+            create: true,
         }) }}
     {% endtag %}
 
