--- a/src/templates/_includes/forms/componentSelect.twig
+++ b/src/templates/_includes/forms/componentSelect.twig
@@ -14,7 +14,7 @@
 
 {% set containerAttributes = {
   id: id,
-  class: ['componentelect']|merge((class ?? [])|explodeClass),
+  class: ['componentselect']|merge((class ?? [])|explodeClass),
 }|merge(containerAttributes ?? [], recursive=true) %}
 
 {% set modalSettings = {
@@ -28,26 +28,29 @@
 {% tag 'div' with containerAttributes %}
   {% tag 'ul' with {
     class: [
+      'components',
       'chips',
       (inline ?? false) ? 'inline-chips' : null,
     ]|filter,
   } %}
-    {% for component in values %}
-      <li>
-        {% set chip = chip(component, {
-          inputName: inputName ?? name ?? null,
-          checkbox: selectable ?? false,
-          showActionMenu: true,
-        }) %}
-        {% if disabled %}
-          {% set chip = chip|removeClass('removable') %}
-        {% endif %}
-        {{ chip|raw }}
-      </li>
-    {% endfor %}
+    {%- apply spaceless %}
+      {% for component in values %}
+        <li>
+          {% set chip = chip(component, {
+            inputName: inputName ?? name ?? null,
+            checkbox: selectable ?? false,
+            showActionMenu: true,
+          }) %}
+          {% if disabled %}
+            {% set chip = chip|removeClass('removable') %}
+          {% endif %}
+          {{ chip|raw }}
+        </li>
+      {% endfor %}
+    {% endapply -%}
   {% endtag %}
 
-  <div class="flex flex-nowrap mt-s">
+  <div class="flex flex-nowrap">
     {% set valueIds = values|map(component => component.getId()) %}
 
     {{ disclosureMenu(options|multisort('uiLabel')|map(component => {
