--- a/src/templates/_includes/forms/iconPicker.twig
+++ b/src/templates/_includes/forms/iconPicker.twig
@@ -2,6 +2,7 @@
 
 {% set id = id ?? "selectize#{random()}" %}
 {% set value = value ?? null %}
+{% set static = static ?? false %}
 
 <div id="{{ id }}" class="icon-picker">
   {% tag 'div' with {
@@ -16,21 +17,23 @@
     {% endif %}
   {% endtag %}
 
-  {{ forms.button({
-    class: 'icon-picker--choose-btn',
-    label: value ? 'Change'|t('app') : 'Choose'|t('app'),
-  }) }}
+  {% if not static %}
+    {{ forms.button({
+      class: 'icon-picker--choose-btn',
+      label: value ? 'Change'|t('app') : 'Choose'|t('app'),
+    }) }}
 
-  {{ forms.button({
-    class: {
-      'icon-picker--remove-btn': true,
-      hidden: not value,
-    }|filter|keys,
-    label: 'Remove'|t('app'),
-  }) }}
+    {{ forms.button({
+      class: {
+        'icon-picker--remove-btn': true,
+        hidden: not value,
+      }|filter|keys,
+      label: 'Remove'|t('app'),
+    }) }}
 
-  {% if name ?? false %}
-    {{ hiddenInput(name, value ?? '') }}
+    {% if name ?? false %}
+      {{ hiddenInput(name, value ?? '') }}
+    {% endif %}
   {% endif %}
 </div>
 
