--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2929,14 +2929,22 @@ table {
       max-width: 100%;
       max-height: 100%;
     }
+  }
+}
 
-    &.cp-icon {
-      svg {
-        max-width: 20px;
-        max-height: 20px;
-        @include svg-mask(var(--ui-control-color));
-      }
-    }
+.cp-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: var(--thumb-size);
+  height: var(--thumb-size);
+
+  svg {
+    width: 20px;
+    height: 20px;
+    max-width: 20px !important;
+    max-height: 20px !important;
+    @include svg-mask(var(--ui-control-color));
   }
 }
 
