Allow entry type creation from Matrix fields

--- a/src/templates/_components/fieldtypes/Matrix/settings.twig
+++ b/src/templates/_components/fieldtypes/Matrix/settings.twig
@@ -6,6 +6,7 @@
     id: 'entry-types',
     name: 'entryTypes[]',
     values: field.getEntryTypes(),
+    create: true,
     errors: field.getErrors('entryTypes'),
 }) }}
 
