--- a/src/templates/_includes/forms/customSelect.twig
+++ b/src/templates/_includes/forms/customSelect.twig
@@ -42,7 +42,7 @@
           <li>
             {% tag 'button' with {
               class: {
-                'menu-option': true,
+                'menu-item': true,
                 sel: option.value == value,
               }|filter|keys,
               data: {
